--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "ansi-color": "^0.2.1",
     "express": "^4.18.2",
     "http": "0.0.1-security",
-    "ngrok": "^4.3.3",
     "readline": "^1.3.0",
     "socket.io": "^4.5.3",
     "socket.io-client": "^4.5.3",
     "util": "^0.12.5"
+  },
+  "engines": {
+    "node": "14.17"
   },
   "private": true
 }
