--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "socket.io-client": "^4.5.3",
     "util": "^0.12.5"
   },
+  "scripts": {
+    "start": "node server.js"
+  },
   "engines": {
     "node": "14.17"
   },
