--- a/config.json
+++ b/config.json
@@ -1,4 +1,3 @@
 {
-  "ngrok_token": "1PAnqWlO8mzWqZFOPk149eLp7FE_XYRYN6B5ryfm65qsMde9",
-  "ngrok_url": "https://1128-41-160-230-182.ngrok.io"
+  "url": "https://private-cli-chat.herokuapp.com"
 }
