Allow for authorized connections

--- a/config-sample.json
+++ b/config-sample.json
@@ -1,3 +1,9 @@
 {
-  "url": ""
+  "environment": "local",
+  "local_url": "http://localhost:11111",
+  "live_url": "",
+  "authorization": {
+    "user": "user1",
+    "secret": "123"
+  }
 }
