--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "ansi-color": "^0.2.1",
     "express": "^4.18.2",
     "http": "0.0.1-security",
+    "play-sound": "^1.1.5",
     "readline": "^1.3.0",
     "socket.io": "^4.5.3",
     "socket.io-client": "^4.5.3",
