--- a/config/config-sample.json
+++ b/config/config-sample.json
@@ -2,6 +2,7 @@
   "environment": "prod",
   "local_url": "http://localhost:11111",
   "live_url": "https://private-cli-chat.herokuapp.com",
+  "chat-name": "Private Group Chat",
   "authorization": {
     "user": "user1",
     "secret": "123"
