--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "PrivateCliChat",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "CLI chat with readline and socket.io",
   "author": "Thinus Barnard",
+  "type": "module",
   "dependencies": {
-    "ansi-color": "^0.2.1",
+    "chalk": "^5.1.2",
     "express": "^4.18.2",
+    "figlet": "^1.5.2",
+    "gradient-string": "^2.0.2",
     "http": "0.0.1-security",
     "play-sound": "^1.1.5",
     "readline": "^1.3.0",
@@ -14,7 +17,8 @@
     "util": "^0.12.5"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server/server.js",
+    "client": "node client/client.js"
   },
   "engines": {
     "node": "14.17"
